build/log/idf_py_stdout_output_51879
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /Users/kiks/blink/build/bootloader/esp-idf/esptool_py && /Users/kiks/.espressif/python_env/idf6.0_py3.13_env/bin/python /Users/kiks/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/kiks/blink/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/Users/kiks/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-3822-g27d68f57e6\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/kiks/blink/build/config -I/Users/kiks/blink/main -I/Users/kiks/esp/esp-idf/components/newlib/platform_include -I/Users/kiks/esp/esp-idf/components/freertos/config/include -I/Users/kiks/esp/esp-idf/components/freertos/config/include/freertos -I/Users/kiks/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/kiks/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/kiks/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/kiks/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/kiks/esp/esp-idf/components/freertos/esp_additions/include -I/Users/kiks/esp/esp-idf/components/esp_hw_support/include -I/Users/kiks/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/kiks/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/kiks/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/kiks/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/kiks/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/kiks/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/Users/kiks/esp/esp-idf/components/esp_hw_support/power_supply/include -I/Users/kiks/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/kiks/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/Users/kiks/esp/esp-idf/components/heap/include -I/Users/kiks/esp/esp-idf/components/heap/tlsf -I/Users/kiks/esp/esp-idf/components/log/include -I/Users/kiks/esp/esp-idf/components/soc/include -I/Users/kiks/esp/esp-idf/components/soc/esp32 -I/Users/kiks/esp/esp-idf/components/soc/esp32/include -I/Users/kiks/esp/esp-idf/components/soc/esp32/register -I/Users/kiks/esp/esp-idf/components/hal/platform_port/include -I/Users/kiks/esp/esp-idf/components/hal/esp32/include -I/Users/kiks/esp/esp-idf/components/hal/include -I/Users/kiks/esp/esp-idf/components/esp_rom/include -I/Users/kiks/esp/esp-idf/components/esp_rom/esp32/include -I/Users/kiks/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/Users/kiks/esp/esp-idf/components/esp_rom/esp32 -I/Users/kiks/esp/esp-idf/components/esp_common/include -I/Users/kiks/esp/esp-idf/components/esp_system/include -I/Users/kiks/esp/esp-idf/components/esp_system/port/soc -I/Users/kiks/esp/esp-idf/components/esp_system/port/include/private -I/Users/kiks/esp/esp-idf/components/xtensa/esp32/include -I/Users/kiks/esp/esp-idf/components/xtensa/include -I/Users/kiks/esp/esp-idf/components/xtensa/deprecated_include -I/Users/kiks/esp/esp-idf/components/esp_driver_gpio/include -I/Users/kiks/esp/esp-idf/components/esp_timer/include -I/Users/kiks/esp/esp-idf/components/esp_pm/include -I/Users/kiks/esp/esp-idf/components/mbedtls/port/include -I/Users/kiks/esp/esp-idf/components/mbedtls/mbedtls/include -I/Users/kiks/esp/esp-idf/components/mbedtls/mbedtls/library -I/Users/kiks/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/Users/kiks/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/Users/kiks/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/Users/kiks/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/Users/kiks/esp/esp-idf/components/esp_app_format/include -I/Users/kiks/esp/esp-idf/components/esp_bootloader_format/include -I/Users/kiks/esp/esp-idf/components/app_update/include -I/Users/kiks/esp/esp-idf/components/bootloader_support/include -I/Users/kiks/esp/esp-idf/components/bootloader_support/bootloader_flash/include -I/Users/kiks/esp/esp-idf/components/esp_partition/include -I/Users/kiks/esp/esp-idf/components/efuse/include -I/Users/kiks/esp/esp-idf/components/efuse/esp32/include -I/Users/kiks/esp/esp-idf/components/esp_mm/include -I/Users/kiks/esp/esp-idf/components/spi_flash/include -I/Users/kiks/esp/esp-idf/components/esp_security/include -I/Users/kiks/esp/esp-idf/components/pthread/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/kiks/blink=. -fmacro-prefix-map=/Users/kiks/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /Users/kiks/blink/main/main.c
/Users/kiks/blink/main/main.c: In function 'app_main':
/Users/kiks/blink/main/main.c:48:27: error: format '%ld' expects argument of type 'long int', but argument 2 has type 'double' [-Werror=format=]
   48 |                 printf("%ld", distance_cm);
      |                         ~~^   ~~~~~~~~~~~
      |                           |   |
      |                           |   double
      |                           long int
      |                         %f
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
